cmd-args.yaml
apiVersion: v1
kind: Pod
metadata:
  name: cmd-args-pod
  labels:
    app: nginx
spec:
  containers:
    - name: nginx
      image: nginx:latest
      ports:
        - containerPort: 80
      command: ["ping"]
      args: ["-c", "60", "google.com"]
