nodeAffinity-Preferred.yaml
apiVersion: v1
kind: Pod 
metadata: 
  name: nginx
spec: 
  affinity:
    nodeAffinity:
      preferredDuringSchedulingIgnoredDuringExecution:
      - weight: 1
        preference: 
          matchExpressions: 
          - key: disktype
            operator: In 
            values: 
            - ssd
  containers: 
    - name: nginx
      image: nginx
