nodeAffinity-Required.yaml
apiVersion: v1
kind: Pod 
metadata: 
  name: nginx
spec: 
  affinity:
    nodeAffinity:
      requiredDuringSchedulingIgnoredDuringExecution:
        nodeSelectorTerms: 
        - matchExpressions:
          - key: disktype
            operator: In 
            values: 
            - ssd 
  containers: 
    - name: nginx
      image: nginx
