request-limit.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx-pod
  labels:
    app: nginx
spec:
  containers:
    - name: nginx
      image: nginx:latest
      resources: 
        requests: 
          memory: "128Mi"
          cpu: "0.5"
        limits: 
          memory: "500Mi"
          cpu: "1"
