specify-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx-pod-port
  labels:
    app: nginx-port
spec:
  containers:
    - name: nginx
      image: nginx:latest
      ports:
        - containerPort: 9090
