endpoints.yaml
apiVersion: v1
kind: Endpoints
metadata:
  name: simple-service
subsets:
  - addresses:
      - ip: 10.108.0.109
    ports:
      - port: 80
