loadbalancer.yaml
apiVersion: v1
kind: Service
metadata:
   name: nodeport-service
spec:
   type: LoadBalancer
   selector:
     app: backend
   ports:
   - port: 80
     targetPort: 80
