nodeport-service.yaml
apiVersion: v1
kind: Service
metadata:
   name: nodeport-service
spec:
   type: NodePort
   ports:
   - port: 80
     targetPort: 80
