service-selector.yaml
apiVersion: v1
kind: Service
metadata:
   name: simple-service
spec:
   selector:
     app: backend
   ports:
   - port: 80
     targetPort: 80
